Adjust spacing. Fix menu hover. Do not archivist page searches.

--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -89,7 +89,7 @@
 .assets-footer {
   align-self: center;
   z-index: 1;
-  margin-top: -80px;
+  margin-top: -60px;
   margin-bottom: 10px;
   max-width: 500px;
   border-radius: 3px;
